# apueExp

course/: a.out  seek.c
exp_1/: exp1.cpp  out
exp_2/: get_arg  get_arg.c  mycp  mycp.c  mycp_copy
exp_3/: myls.c  out
exp_4/: CMakeLists.txt  README.md
exp_4/executable/: CMakeLists.txt  main.c
